// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfig config validation should not throw and print nothing for valid config 1`] = `""`;

exports[`getConfig config validation should not throw and print validation warnings for mixed config 1`] = `
"
WARN ● Validation Warning:


  Unknown option \\"*.js\\" with value ['eslint --fix', 'git add'] was found in the config root.
  
  You probably trying to mix simple and advanced config formats. 
  
  Adding 
  
  \\"linters\\": {
    \\"*.js\\": ['eslint --fix', 'git add']
  }
   
  will fix it and remove this message.

Please refer to https://github.com/okonet/lint-staged#configuration for more information..."
`;

exports[`getConfig config validation should throw and print validation errors for invalid config 1`] = `
"● Validation Error:

  Option \\"chunkSize\\" must be of type:
    number
  but instead received:
    string

  Example:
  {
    \\"chunkSize\\": 9007199254740991
  }

Please refer to https://github.com/okonet/lint-staged#configuration for more information..."
`;

exports[`getConfig should return config with defaults 1`] = `
Object {
  "chunkSize": 9007199254740991,
  "concurrent": true,
  "gitDir": ".",
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "linters": Object {},
  "renderer": "update",
  "subTaskConcurrency": 1,
  "verbose": false,
}
`;

exports[`getConfig should return config with defaults for undefined 1`] = `
Object {
  "chunkSize": 9007199254740991,
  "concurrent": true,
  "gitDir": ".",
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "linters": Object {},
  "renderer": "update",
  "subTaskConcurrency": 1,
  "verbose": false,
}
`;

exports[`getConfig should set linters 1`] = `
Object {
  "chunkSize": 9007199254740991,
  "concurrent": true,
  "gitDir": ".",
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "linters": Object {
    "*.js": Array [
      "eslint --fix",
      "git add",
    ],
    ".*rc": "jsonlint",
  },
  "renderer": "update",
  "subTaskConcurrency": 1,
  "verbose": false,
}
`;
